--- a/src/style.css
+++ b/src/style.css
@@ -200,7 +200,7 @@
   color: #14021b;
   font-size: 15px;
   padding: 8px 12px;
-  position: absolute;
+  position: relative;
   bottom: 8px;
   width: 100%;
   text-align: center;
@@ -210,8 +210,8 @@
 .titletext {
   color: #400606;
   font-size: 20px;
-  padding-top: 20rem;
-  position: absolute;
+  padding-top: 2rem;
+  position: relative;
   top: 0;
   display: inline-flex;
   justify-content: center;
