--- a/src/style.css
+++ b/src/style.css
@@ -206,18 +206,12 @@
   text-align: center;
 }
 
-/* titletext */
-.titletext {
-  color: #400606;
+.text h3 {
   font-size: 20px;
-  padding-top: 20rem;
-  position: relative;
-  top: 0;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 3rem;
+  padding-top: 1rem;
 }
+
+
 
 /* The dots/bullets/indicators */
 .dot {
