--- a/src/style.css
+++ b/src/style.css
@@ -258,7 +258,10 @@
   #gallery {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    margin: 10px;
   }
+  /* how to make the same space for the category imgs to both sides???  */
 
   #gallery[data-state="viewing_category"] {
     grid-template-columns: repeat(1, 1fr) !important;
@@ -266,12 +269,15 @@
 
   #gallery > div:not(.selected) > img {
     width: 100%;
-    transform: translateY(calc(90px - 50%));
+    /* transform: translateY(calc(90px - 50%)); */
+    border-radius: 15px;
+    height: 55%;
   }
   #gallery > div.selected > img {
     max-height: 100%;
     display: block;
     margin: auto;
+    align-items: center;
   }
 
   #gallery img.bottom {
@@ -288,10 +294,14 @@
     overflow: hidden;
   }
   #gallery > div:not(.selected) {
-    height: 180px;
+    height: 520px;
   }
   #gallery > div.selected {
-    height: 240px;
+    height: 660px;
+    gap: 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 
   #gallery > div:not(.cover):not(.selected) {
@@ -303,14 +313,14 @@
   }
 
   #gallery > div:not(.selected) > .category_cover {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     text-align: center;
     align-content: center;
-    background-color: #4444447b;
+    background-color: transparent;
   }
 
   #gallery > div:not(.selected) > .category_cover > span {
@@ -334,12 +344,12 @@
 
   #gallery .footer p {
     color: rgb(243, 127, 11);
-    font-size: 0.45em;
+    font-size: 1em;
     bottom: 1em;
   }
 
   #gallery .footer h2 {
-    margin: 0.2em 0px;
+    margin: 0.2em 10px;
     transition: all 0.2s ease;
     opacity: 0;
   }
@@ -365,9 +375,12 @@
     #gallery img, #gallery .footer {
       margin: 0 auto;
     }
-    /* #gallery .footer p {
-      font-size: 1em;
-    } */
+    #gallery > div:not(.selected) > img {
+      width: 90%;
+      /* transform: translateY(calc(90px - 50%)); */
+      height: 85%;
+    }
+   
   }
 
   .learning-journey {
