--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 
   :root {
     --bg-primary-color: rgba(238,174,202,0.8);
-    --font-default: monospace;
+    --font-default: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     --bg-default:   background: rgb(255,233,243);
     background: -moz-radial-gradient(circle, rgba(255,233,243,1) 23%, rgba(215,232,252,1) 77%);
     background: -webkit-radial-gradient(circle, rgba(255,233,243,1) 23%, rgba(215,232,252,1) 77%);
@@ -407,7 +407,7 @@
     height: 260px;
     background-color:rgb(249, 194, 172, 0.7);
     font-family: 'Times New Roman', Times, serif;
-    font-size: medium;
+    font-size: large;
     color: rgb(1, 42, 42);
     border-radius: 15px; 
   }
@@ -464,6 +464,9 @@
       display: inline-flex;
       flex-direction: column;
       
+    }
+    .step1, .step2, .step3 {
+      font-size: medium;
     }
 
   }
